--- a/WebRoot/css/plhdb.css
+++ b/WebRoot/css/plhdb.css
@@ -74,17 +74,25 @@ padding-top:0;
 .header #user_info {
 float:right;
 color:#FFFFFF;
-font-size:80%;
-width:400px;
+font-size:90%;
+width:300px;
 }
 #nav {
 	height: 46px;
 }
 #nav img {
-	float: left;
-	 border: none;
+  float: left;
+  border: none;
+  border:0;
+  margin:0;
+  padding:0;   
 }
 
+#nav a {
+   border:0;
+  margin:0;
+  padding:0;   
+}
 
 /* content */
 .content {
@@ -149,7 +157,7 @@ width:220px;
 
 a, a *
 {
-	color:				#0000ff;
+	color:	#0000ff;
 }
 
 
